test_programs/compile_failure/noirc_frontend_tests_traits_warns_if_trait_is_not_in_scope_for_generic_function_call_and_there_is_only_one_trait_method/src/main.nr

    fn main() {
        let x: i32 = 1;
        let _ = x.foo();
    }

    mod private_mod {
        pub trait Foo<T> {
            fn foo(self) -> i32;
        }

        impl<T> Foo<T> for T {
            fn foo(self) -> i32 {
                42
            }
        }
    }
    